# otus-cpp

./: CMakeLists.txt  lib.h  main.cpp  test_version.cpp  version.cpp  version.h.in
.github/workflows/: main-к.yml  main.yml  main3.yml  release.yml
env/: pyvenv.cfg
